Fix horrible gap

--- a/assets/ananke/css/custom.css
+++ b/assets/ananke/css/custom.css
@@ -21,3 +21,7 @@
     display: block;
     margin: 0 auto;
 }
+
+nav ul > li {
+    margin-right: -4px;
+}
